# ros2-perception-pybullet1

./: README.md
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: full_system.launch.py
src/robot_control/: package.xml  setup.py
src/robot_control/robot_control/: autonomous_controller.py  command_mux.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: ApproachTarget.action
src/robot_interfaces/msg/: ControlMode.msg  ObstacleInfo.msg  TargetDetection.msg
src/robot_manual_control/: package.xml  setup.cfg  setup.py
src/robot_manual_control/robot_manual_control/: keyboard_teleop.py  mode_manager.py
src/robot_perception/: package.xml  setup.py
src/robot_perception/robot_perception/: obstacle_detector.py  target_detector.py
src/robot_simulation/: package.xml  setup.py
src/robot_simulation/robot_simulation/: pybullet_simulator.py
