cmake_minimum_required(VERSION 3.10)
project(robot_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/TargetDetection.msg"
  "msg/ObstacleInfo.msg"
  "msg/ControlMode.msg"
  "srv/SetControlMode.srv"
  "srv/ResetSimulation.srv"
  "action/ApproachTarget.action"
)

ament_export_dependencies(rosidl_default_runtime)

ament_package()